--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /CodingChallenge/.vs
 /CodingChallenge/bin
 /CodingChallenge/obj
+/CodingChallenge.Tests/.vs
 /CodingChallenge.Tests/bin
 /CodingChallenge.Tests/obj
